--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@mui/icons-material": "5.10.9",
     "@mui/material": "5.10.11",
     "deck.gl": "8.8.0",
-    "react-map-gl": "5.0.0",
-    "supercluster": "6.0.1",
     "lodash": "4.17.21",
     "mapbox-gl": "2.10.0",
     "meteor-node-stubs": "1.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-map-gl": "5.0.0",
     "react-router-dom": "6.4.2",
+    "react-select": "5.6.0",
+    "react-table": "6.11.4",
     "react-toastify": "9.1.1",
-    "react-table": "6.11.4"
+    "supercluster": "6.0.1"
   },
   "meteor": {
     "mainModule": {
